[tool.poetry]
name = "eckbot"
version = "0.1.0"
description = ""
authors = ["kiralenz <kira.lenz@contiamo.com>"]
readme = "README.md"
packages = [{include = "eckbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
haystack-ai = "^2.2.1"
ollama-haystack = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.366"
ruff = "^0.4.8"
typos = "^1.22.3"
ipykernel = "^6.29.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# see https://microsoft.github.io/pyright/#/configuration?id=pyright-configuration
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
typeCheckingMode = "basic"


[tool.ruff]
# See https://beta.ruff.rs/docs/configuration/
select = ["E", "F", "I",]
ignore = ["E501"]
extend-safe-fixes = ["F601"]

[tool.ruff.isort]
combine-as-imports = true